# Plugins

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md
Assets/: CMakeLists.txt
Assets/SharedAssets/: CMakeLists.txt
Bass Division/Source/: BDAnalyserPanel.h  BDBandPanel.cpp  BDBandPanel.h  BDFftPanel.cpp  BDPanelBase.cpp  BDPanelBase.h  BDProcessor.h  InterfaceDefines.h  IrPanel.cpp  IrPanel.h  MeterAnalysis.cpp  MeterAnalysis.h  MidCrossover.cpp  PluginEditor.h  PresetManager.h  SynthLookAndFeel.h  TSClipper.cpp  TSClipper.h  Utilities.h  dRowAudio_FifoBuffer.h
Bass Division/Source/FFT/: SpectrumAnalyserHeader.h  SpectrumProcessor.cpp
Modules/: CMakeLists.txt
Modules/DivisionVoid/: DivisionVoid.cpp  DivisionVoid.h
Modules/DivisionVoid/Source/: Utilities.h
Modules/dRowAudio/: dRowAudio.cpp  dRowAudio.h
Modules/dRowAudio/audio/: dRowAudio_AudioFilePlayer.cpp  dRowAudio_AudioFilePlayer.h  dRowAudio_AudioSampleBufferAudioFormat.cpp  dRowAudio_AudioSampleBufferAudioFormat.h  dRowAudio_Pitch.h
Modules/dRowAudio/gui/: dRowAudio_Clock.cpp  dRowAudio_GuiHelpers.h  dRowAudio_MusicLibraryTable.cpp  dRowAudio_Spectrograph.cpp  dRowAudio_TriggeredScope.cpp
Modules/dRowAudio/maths/: dRowAudio_CumulativeMovingAverage.h
Modules/dRowAudio/network/: dRowAudio_CURLEasySession.cpp  dRowAudio_CURLEasySession.h
Modules/dRowAudio/parameters/: dRowAudio_PluginParameter.cpp  dRowAudio_PluginParameter.h
Modules/dRowAudio/streams/: dRowAudio_StreamAndFileHandler.h
Modules/dRowAudio/utility/: dRowAudio_DebugObject.h  dRowAudio_EncryptedString.cpp  dRowAudio_ITunesLibraryParser.h  dRowAudio_UnityBuilder.cpp  dRowAudio_Utility.h
Plugins/: CMakeLists.txt
Plugins/ADT/: CMakeLists.txt
Plugins/ADT/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/ADT/Source/Analysis/: DelayAnalysis.cpp  DelayAnalysis.h
Plugins/ADT/Source/Processors/: DelayProcessor.h  VocoderProcessor.h
Plugins/Bass Division/: Bass Division.jucer  CMakeLists.txt
Plugins/Bass Division/Source/: BDCompPanel.cpp  BDCompPanel.h  BDProcessPanel.cpp  Compressor.cpp  FIFO.cpp  FIFO.h  HighCrossover.cpp  HighCrossover.h  IrManager.cpp  IrManager.h  LowCrossover.cpp  LowGUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  SubGUI.cpp  SubGUI.h  dBFS Analysis.h  dRowAudio_Buffer.h
Plugins/BassDivision/: CMakeLists.txt
Plugins/BassDivision/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/BassDivision/Source/FFT/: SpectrumAnalyserHeader.h  SpectrumViewer.cpp  SpectrumViewer.h
Plugins/BassDivision/Source/GUI/: MainPanel.cpp  MainPanel.h  PanelBase.h
Plugins/BassDivision/Source/GUI/Panels/: BDBottomPanel.cpp  BDBottomPanel.h  BandPanel.cpp  BandPanel.h  BottomPanel.cpp  BottomPanel.h  MiddlePanel.cpp  MiddlePanel.h  ProcessPanel.cpp  ProcessPanel.h  TopPanel.cpp  TopPanel.h
Plugins/BassDivision/Source/Managers/: IrManager.h  PresetManager.cpp  PresetManager.h
Plugins/C-Bass/: CMakeLists.txt
Plugins/C-Bass/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Kraken/: CMakeLists.txt
Plugins/Kraken/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/MPE Synth/: CMakeLists.txt
Plugins/SimplePluginTemplate/: CMakeLists.txt
Plugins/Synth/: CMakeLists.txt
Plugins/TemplatePlugin/: CMakeLists.txt
Tests/: CMakeLists.txt  Tests.cpp
(+110 files in other folders)
